--- a/Project_web_pet/QuanLyCSS/chocanh.css
+++ b/Project_web_pet/QuanLyCSS/chocanh.css
@@ -1,14 +1,19 @@
 body {
     margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 /* header */
 .header {
     width: 100%;
     height: 70px;
-    background-color: black;
+    background-color: #353535;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    position: fixed ;
+    left: 0;
+    top: 0;
 }
 .header .header_left {
     display: flex;
@@ -17,11 +22,12 @@ body {
 .header .header_left img {
     width: 150px;
     height: 50px;
-    margin-left: 50px;
+    margin-left: 20px;
 }
 .header_left_menu {
     width: 800px;
     height: 70px;
+    margin-left: 20px;
 }
 .header_left_menu ul {
     display: flex;
@@ -29,16 +35,23 @@ body {
     justify-content: space-between;
     list-style: none;
     margin: 0;
-    margin-top: 25px;
     padding-left: 30px;
-    font-size: 17px;
+    /* font-size: 17px; */
 }
 .header_left_menu a {
     text-decoration: none;
-    color: aliceblue;
-    font-family: Arial, Helvetica, sans-serif;
-    
+    color: #ffffff;
+    line-height: 70px;
+    width: 100px;
 }
+.header_left_menu ul li {
+    width: 100px;
+    text-align: center;
+}
+.header_left_menu ul li:hover {
+    background-color: #30b5b2;
+}
+
 .header_right {
     margin-right: 50px;
 }
@@ -55,7 +68,7 @@ body {
 .center_menu {
     display: flex;
     width: 1315px;
-    margin-top: 55px;
+    margin-top: 100px;
     margin-left: 90px;
     justify-content: space-between;
     align-items: center;
@@ -66,10 +79,25 @@ body {
     font-family: sans-serif;
     color: rgba(102,102,102,0.7);
 }
-.center_menu_left span {
-    margin: 0 5px;
-    
+.breadcrumbs {
+    text-transform: uppercase;
+    color: #222;
+    font-weight: bold;
+    letter-spacing: 0px;
+    padding: 0;
 }
+.breadcrumbs a {
+    color: rgba(102,102,102,0.7);
+    font-weight: normal;
+}
+.center_menu_left span {
+    position: relative;
+    top: 1.5px;
+    opacity: .35;
+    margin: 0 0.3em;
+    font-weight: 300;
+}
+
 .center_menu_right {
     display: flex;
 }
@@ -89,6 +117,7 @@ body {
     margin-top: 10px;
     border: 1px solid #ddd;
     padding: 0px 10px;
+    border-radius: 3px;
 }
 /* center_main */
 .center_main {
@@ -128,6 +157,10 @@ body {
     font-size: 20px;
     color: #1c1c1c;
 }
+
+.left_danhmuc a:hover {
+    color: rgb(244, 82, 150);
+}
 .left_danhmuc ul>li {
     border-bottom: 1px solid #BCBBBB;
 }
@@ -141,6 +174,9 @@ body {
 /* left_sanpham */
 .left_sanpham {
     margin-top: 100px;
+}
+.left_sanpham img {
+    cursor: pointer;
 }
 .center_main_left .left_sanpham >p {
     font-size: 20px;
@@ -165,6 +201,9 @@ body {
    color: #1c1c1c;
    margin-left: 10px;
 }
+.left_sanpham ul a > .p1:hover {
+    color: rgb(244, 82, 150);
+}
 .left_sanpham ul a p {
     margin: 0;
 }
@@ -182,25 +221,53 @@ body {
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, auto);
     justify-content: space-between;
-    width: 800px;
+    width: 900px;
 }
-.right_cards img {
-    width: 250px;
+.right_cards {
+    width: 275px;
+    display: block;
+    position: relative;
+    /* position: fixed; */
+}
+.cards_shopping {
+    position: absolute;
+    top: 210px;
+    left: 10px;
+}
+.cards_shopping img:hover {
+    background-color: green;
+    cursor: pointer;
+}
+.cards_img img {
+    /* width: 250px;
+    height: 250px; */
+    width: 100%; 
+    height: 100%;  
+    transition-duration: 0.5s; /*thời gian hiển thị hiệu ứng*/
+    cursor: pointer;
+}
+.cards_img img:hover {
+    transform: scale(1.1);
+}
+.right_cards .cards_img {
+    width: 275px;
     height: 250px;
-}
-.center_main_right .right_cards {
-    height: 350px;
-    background-color: #F2F0F0;
-    border-radius: 3px;
+    overflow: hidden; /* là để .cards_img không tràn ra ngoài khung chứa khi phóng to lên.*/
 }
 .right_cards .cards_name {
     text-align: center;
     font-family: sans-serif;
-    margin-top: 20px;
+    height: 80px;
+    background-color: #F2F0F0;
+    border-radius: 3px;
+    padding-top: 20px;
 }
 .cards_name a {
     text-decoration: none;
     color: black;
+}
+.cards_name a:hover {
+    color: rgb(244, 82, 150);
 }
 /* footer */
 .footer {
@@ -234,6 +301,9 @@ body {
 .footer_menu_left a {
     text-decoration: none;
     color: #fff;
+}
+.footer_menu_left a:hover {
+    color: rgb(255, 242, 0);
 }
 .footer_menu_center {
     width: 42%;
@@ -287,8 +357,12 @@ body {
     font-size: 16px;
     padding-left: 5px;
 }
-.information .information_email p {
-    margin: 8px 0;
+.information p > a {
+    text-decoration: none;
+    color: #fff;
+}
+.information p > a:hover {
+    color: rgb(255, 242, 0);
 }
 /* end */
 .end {
