--- a/Project_web_pet/QuanLyCSS/trangchu.css
+++ b/Project_web_pet/QuanLyCSS/trangchu.css
@@ -3,8 +3,11 @@ body{
 }
 
 .container{
-    width: 1425px;
+    width: 100%;
     background-color: rgba(217, 217, 217, 0.19);
+}
+.container .container1 a{
+    text-decoration: none;
 }
 .container .container1 .anh1{
     position: absolute;
@@ -16,7 +19,7 @@ body{
 .container .container1 .p1{
     position: absolute;
     left: 365px;
-    top: 20px;
+    top: 40px;
 
     font-family: 'Inter';
     font-style: normal;
@@ -28,7 +31,7 @@ body{
 .container .container1 .p2{
     position: absolute;
     left: 490px;
-    top: 20px;
+    top: 40px;
 
     font-family: 'Inter';
     font-style: normal;
@@ -40,7 +43,7 @@ body{
 .container .container1 .p3{
     position: absolute;
     left: 618px;
-    top: 20px;
+    top: 40px;
 
     font-family: 'Inter';
     font-style: normal;
@@ -52,7 +55,7 @@ body{
 .container .container1 .p4{
     position: absolute;
     left: 740px;
-    top: 20px;
+    top: 40px;
 
     font-family: 'Inter';
     font-style: normal;
@@ -64,7 +67,7 @@ body{
 .container .container1 .p5{
     position: absolute;
     left: 830px;
-    top: 20px;
+    top: 40px;
     
     font-family: 'Inter';
     font-style: normal;
@@ -77,7 +80,7 @@ body{
 .container .container1 .p6{
     position: absolute;
     left: 950px;
-    top: 20px;
+    top: 40px;
     
     font-family: 'Inter';
     font-style: normal;
@@ -90,7 +93,7 @@ body{
 .container .container1 .p7{
     position: absolute;
     left: 1050px;
-    top: 20px;
+    top: 40px;
     
     font-family: 'Inter';
     font-style: normal;
@@ -516,21 +519,81 @@ body{
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-.container .container5 .container5a h3{
+.container .container5 .container5a a{
     position: absolute;
     margin-top: 15px;
-    margin-left: 18px;
+    margin-left: 30px;
     color: #FCFCFC;
+    text-decoration: none;
 }
 .container .container6{
     margin-top: 48px;
+    display: flex;
+    width: 100%;
+    height:375px;
+}
+.container .container6a{
+    overflow: hidden;
+    width: 50%;
+}
+.container .container6a img{ 
+    transition-duration: 0.5s;
+}
+.container .container6 .container6a img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
 }
 .container .container7{
     margin-top: 50px;
     padding-top: 1px;
     padding-bottom: 50px;
 
-    background: rgba(217, 217, 217, 0.7);
+    background: rgba(217, 217, 217, 0.227);
+}
+.container .container7 .container7a .container7a1{
+    display: flex;
+    padding-top: 55px;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+
+}
+.container .container7 .container7a .container7a1 .container7a11{
+    height:215px;
+    width: 380px;
+    overflow: hidden;
+}
+.container .container7 .container7a .container7a1 .container7a11 img{
+    transition-duration: 0.5s;
+}
+.container .container7 .container7a .container7a1 .container7a11 img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.container .container7 .container7a .container7a2{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    margin-top: -160px;
+    gap: 70px;
+    margin-left: 150px;
+}
+.container .container7 .container7a .container7a21 p{
+    color:#867676;
+    margin-top: -10px;
+}
+.container .container7 .container7a .container7a21 a{
+    color:rgb(255, 20, 114);
+    text-decoration: none;
+}
+.container .container7 .container7a .container7a21{
+    padding-left: 20px;
+}
+.container .container7 .container7a .container7a2 .container7a21{
+    width: 320px;
+    height: 140px;
+    background-color: aliceblue;
 }
 .footer {
     position: relative;
