them bootrap cho trang chu

--- a/Project_web_pet/QuanLyCSS/footer.css
+++ b/Project_web_pet/QuanLyCSS/footer.css
@@ -61,7 +61,7 @@
 .footer_menu_center input[type=submit] {
     width: 70px;
     height: 60px;
-    background-color: rgb(96, 247, 197);
+    background-color:#2EBAB2;
     border-radius: 10px;
     border: none;
     color: #fff;
