--- a/Project_web_pet/QuanLyCSS/trangchu.css
+++ b/Project_web_pet/QuanLyCSS/trangchu.css
@@ -3,21 +3,22 @@ body{
     font-family: "Roboto", sans-serif;
 }
 
-.container{
+
+.containerhi{
     width: 100%;
     background-color: rgba(217, 217, 217, 0.19);
 }
-.container .container1 a{
+.containerhi .container1 a{
     text-decoration: none;
 }
-.container .container1 .anh1{
+.containerhi .container1 .anh1{
     position: absolute;
     width: 183px;
     height: 55px;
     left: 80px;
     top: 30px;
 }
-.container .container1 .p1{
+.containerhi .container1 .p1{
     position: absolute;
     left: 365px;
     top: 40px;
@@ -29,7 +30,7 @@ body{
 
     color: #D9D9D9; 
 }
-.container .container1 .p2{
+.containerhi .container1 .p2{
     position: absolute;
     left: 490px;
     top: 40px;
@@ -41,7 +42,7 @@ body{
 
     color: #D9D9D9;
 }   
-.container .container1 .p3{
+.containerhi .container1 .p3{
     position: absolute;
     left: 618px;
     top: 40px;
@@ -53,7 +54,7 @@ body{
 
     color: #D9D9D9;
 }
-.container .container1 .p4{
+.containerhi .container1 .p4{
     position: absolute;
     left: 740px;
     top: 40px;
@@ -65,7 +66,7 @@ body{
 
     color: #D9D9D9;
 }
-.container .container1 .p5{
+.containerhi .container1 .p5{
     position: absolute;
     left: 830px;
     top: 40px;
@@ -78,7 +79,7 @@ body{
     color: #D9D9D9;
     
 }
-.container .container1 .p6{
+.containerhi .container1 .p6{
     position: absolute;
     left: 950px;
     top: 40px;
@@ -91,7 +92,7 @@ body{
     color: #D9D9D9;
     
 }
-.container .container1 .p7{
+.containerhi .container1 .p7{
     position: absolute;
     left: 1050px;
     top: 40px;
@@ -103,28 +104,28 @@ body{
     
     color: #D9D9D9;
 }
-.container .container1 .anh2{
+.containerhi .container1 .anh2{
 
     position: absolute;
     left: 1190px;
     top: 40px;
 
 }
-.container .container1 .anh3{
+.containerhi .container1 .anh3{
 
     position: absolute;
     left: 1230px;
     top: 35px;
 
 }
-.container .container1 .anh4{
+.containerhi .container1 .anh4{
 
     position: absolute;
     left: 1285px;
     top: 40px;
 
 }
-.container .p1{
+.containerhi .p1{
     position: absolute;
     width: 414px;
     height: 72px;
@@ -139,7 +140,7 @@ body{
     color: #F5F5F5;
     
 }
-.container .p2{
+.containerhi .p2{
     position: absolute;
     width: 680px;
     height: 120px;
@@ -152,7 +153,7 @@ body{
     
     color: #F5F5F5;
 }
-.container .p3{
+.containerhi .p3{
     position: absolute;
     left: 130px;
     top: 335px;
@@ -163,7 +164,7 @@ body{
     
     color: #FCFCFC;
 }
-.container .p4{
+.containerhi .p4{
     position: absolute;
     left: 130px;
     top: 380px;
@@ -175,7 +176,7 @@ body{
     
     color: #FCFCFC;
 }
-.container .p5{
+.containerhi .p5{
     position: absolute;
     left: 130px;
     top: 425px;
@@ -186,7 +187,7 @@ body{
     
     color: #FCFCFC;
 }
-.container .shopnow{
+.containerhi .shopnow{
     position: absolute;
     width: 180px;
     height: 58px;
@@ -196,7 +197,7 @@ body{
     background: #4CA8A2;
     border-radius: 11px;
 }
-.container .shopnow p{
+.containerhi .shopnow p{
     position: absolute;
     margin-top: 15px;
     left: 25px;
@@ -206,62 +207,62 @@ body{
     color: #FFFFFF;
     
 }
-.container .container2{
+.containerhi .container2{
     height: 140px;
     margin-top: -4px;
     color:aliceblue;
     background: rgba(76, 168, 162, 0.6);
 }
-.container .container2 p{
+.containerhi .container2 p{
     margin-top: -15px;
 }
-.container .container2 .container21{
+.containerhi .container2 .container21{
     height: 60px;
 
     background: rgba(76, 168, 162, 0.8);
 }
-.container .container2 .container22{
+.containerhi .container2 .container22{
     position: absolute;
     margin-top: -10px;
     left: 70px;
 }
-.container .container2 .container23{
+.containerhi .container2 .container23{
     position: absolute;
     left: 140px;
     margin-top: -30px;
 }
-.container .container2 .container24{
+.containerhi .container2 .container24{
     position: absolute;
     margin-top: -10px;
     left: 400px;
 }
-.container .container2 .container25{
+.containerhi .container2 .container25{
     position: absolute;
     margin-top: -10px;
     left: 470px;
     margin-top: -30px;
 }
-.container .container2 .container26{
+.containerhi .container2 .container26{
     position: absolute;
     margin-top: -10px;
     left:720px
 }
-.container .container2 .container27{
+.containerhi .container2 .container27{
     position: absolute;
     margin-top: -30px;
     left: 790px;
 }
-.container .container2 .container28{
+.containerhi .container2 .container28{
     position: absolute;
     margin-top: -10px;
     left: 1070px;
 }
-.container .container2 .container29{
+.containerhi .container2 .container29{
     position: absolute;
     margin-top: -30px;
     left: 1140px;
 }
-.container .chocanh{
+.containerhi .chocanh{
     font-size: 35px;
     font-family: 'Itim';
     font-style: normal;
@@ -270,38 +271,38 @@ body{
     align-items: center;
     padding-top: 20px;
 }
-.container .imgchocanh{
+.containerhi .imgchocanh{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: -25px;
 }
-.container .container3{
+.containerhi .container3{
     display: flex;
     align-items: center;
     justify-content: center;
     padding-top: 50px;
     gap:30px;
 }
-.container .container3 .container3a{
+.containerhi .container3 .container3a{
     width: 280px;
     height: 385px;
 
     background: #e6e4e4;
 }
-.container .container3 .img1{
+.containerhi .container3 .img1{
     overflow: hidden;
     height: 280px;
     width: 280px;
 }
-.container .container3 .container3a img{
+.containerhi .container3 .container3a img{
     transition-duration: 0.5s;
 }
-.container .container3 .container3a img:hover{
+.containerhi .container3 .container3a img:hover{
     transform: scale(1.1);
     cursor: pointer;
 }
-.container .container3 .container3a p{
+.containerhi .container3 .container3a p{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -309,15 +310,15 @@ body{
     margin-top: 5px;
     font-size: 15px;
 }
-.container .container3 .container3a .p10{
+.containerhi .container3 .container3a .p10{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: -10px;
     font-size: 22px;
     color: #423d3d;
 }
-.container .container3 .container3a .p20{
+.containerhi .container3 .container3a .p20{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -325,32 +326,32 @@ body{
     color: black;
 }
 
-.container .container4{
+.containerhi .container4{
     display: flex;
     align-items: center;
     justify-content: center;
     padding-top: 30px;
     gap:30px;
 }
-.container .container4 .img1{
+.containerhi .container4 .img1{
     overflow: hidden;
     height: 280px;
     width: 280px;
 }
-.container .container4 .container4a img{
+.containerhi .container4 .container4a img{
     transition-duration: 0.5s;
 }
-.container .container4 .container4a img:hover{
+.containerhi .container4 .container4a img:hover{
     transform: scale(1.1);
     cursor: pointer;
 }
-.container .container4 .container4a{
+.containerhi .container4 .container4a{
     width: 280px;
     height: 385px;
 
     background: #e6e4e4;
 }
-.container .container4 .container4a p{
+.containerhi .container4 .container4a p{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -358,15 +359,15 @@ body{
     margin-top: 5px;
     font-size: 15px;
 }
-.container .container4 .container4a .p10{
+.containerhi .container4 .container4a .p10{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: -10px;
     font-size: 22px;
     color: #423d3d;
 }
-.container .container4 .container4a .p20{
+.containerhi .container4 .container4a .p20{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -374,20 +375,21 @@ body{
     color: black;
 }
 
-.container .container5{
+.containerhi .container5{
     width: 145px;
     height: 47px;
     border-radius: 5px;
     margin-left: 640px;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
-.container .container5 .container5a{
+.containerhi .container5 .container5a{
     background: #2EBAB2;
     width: 145px;
     height: 47px;
     border-radius: 5px;
 }
-.container .container5 .container5a1{
+.containerhi .container5 .container5a1{
     position: absolute;
     background: #4ca8a2a2;
     width: 145px;
@@ -396,38 +398,38 @@ body{
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-.container .container5 .container5a a{
+.containerhi .container5 .container5a a{
     position: absolute;
     margin-top: 15px;
     margin-left: 30px;
     color: #FCFCFC;
     text-decoration: none;
 }
-.container .container6{
+.containerhi .container6{
     margin-top: 48px;
     display: flex;
     width: 100%;
     height:375px;
 }
-.container .container6a{
+.containerhi .container6a{
     overflow: hidden;
     width: 50%;
 }
-.container .container6a img{ 
+.containerhi .container6a img{ 
     transition-duration: 0.5s;
 }
-.container .container6 .container6a img:hover{
+.containerhi .container6 .container6a img:hover{
     transform: scale(1.1);
     cursor: pointer;
 }
-.container .container7{
+.containerhi .container7{
     margin-top: 50px;
     padding-top: 1px;
     padding-bottom: 50px;
 
     background: rgba(217, 217, 217, 0.227);
 }
-.container .container7 .container7a .container7a1{
+.containerhi .container7 .container7a .container7a1{
     display: flex;
     padding-top: 55px;
     gap: 30px;
@@ -436,19 +438,19 @@ body{
     padding-bottom: 100px;
 
 }
-.container .container7 .container7a .container7a1 .container7a11{
+.containerhi .container7 .container7a .container7a1 .container7a11{
     height:215px;
     width: 380px;
     overflow: hidden;
 }
-.container .container7 .container7a .container7a1 .container7a11 img{
+.containerhi .container7 .container7a .container7a1 .container7a11 img{
     transition-duration: 0.5s;
 }
-.container .container7 .container7a .container7a1 .container7a11 img:hover{
+.containerhi .container7 .container7a .container7a1 .container7a11 img:hover{
     transform: scale(1.1);
     cursor: pointer;
 }
-.container .container7 .container7a .container7a2{
+.containerhi .container7 .container7a .container7a2{
     position: absolute;
     display: flex;
     align-items: center;
@@ -456,18 +458,18 @@ body{
     gap: 70px;
     margin-left: 150px;
 }
-.container .container7 .container7a .container7a21 p{
+.containerhi .container7 .container7a .container7a21 p{
     color:#867676;
     margin-top: -10px;
 }
-.container .container7 .container7a .container7a21 a{
+.containerhi .container7 .container7a .container7a21 a{
     color:rgb(255, 20, 114);
     text-decoration: none;
 }
-.container .container7 .container7a .container7a21{
+.containerhi .container7 .container7a .container7a21{
     padding-left: 20px;
 }
-.container .container7 .container7a .container7a2 .container7a21{
+.containerhi .container7 .container7a .container7a2 .container7a21{
     width: 320px;
     height: 140px;
     background-color: aliceblue;
